include/libgpump.h

typedef size_t gpump_size_t ;
/**
 * \brief Terminate use of the gpump library
 *
 * \param[in] comm MPI communicator
 */
void gpump_f_term_r(MPI_Fint vcomm) ;
/**
* \brief Nonblocking RDMA get triggered by CPU from communication partner
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[out] offset Offset in bytes from 'local address' in the window to which data will be written
* \param[in] remote_offset Offset in bytes from the communication partner's 'remote address' in the window from which data will be taken
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_iget_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
/**
* \brief Block the stream until the RDMA get completes
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream to block until the RDMA get completes
*
*/
void gpump_f_stream_wait_get_complete_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex, cudaStream_t vstream) ;
/**
* \brief CPU acknowledges that RDMA get will complete
*
* \note Make this call if you will not be making a call to gpump_stream_wait_get_complete for this transfer
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*/
void gpump_f_cpu_ack_iget_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex) ;
/**
* \brief Nonblocking test of whether the RDMA get is complete
*
* \note '1' will be returned once only for each RDMA get operation
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[out] is_complete 0 for still in progress, 1 for complete
*
*/
void gpump_f_is_get_complete_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex, MPI_Fint *is_complete) ;
/**
* \brief Blocking wait for RDMA completion
*
* \note equivalent to calling gpump_f_is_get_complete in a loop until 1 is returned
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*
*/
void gpump_f_wait_get_complete_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex) ;
/**
* \brief Nonblocking send for 2-sided communication on stream to communication partner
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream which will initiate the send request to the HCA
* \param[in] source_mr_index memory region index as passed to gpump_f_register_region from which data will be taken
* \param[in] offset Offset in bytes from in the source_mr from which data will be taken
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_stream_send_r(MPI_Fint vcomm,MPI_Fint vtarget, cudaStream_t vstream, MPI_Fint vsource_mr_index, gpump_size_t voffset, gpump_size_t vsize) ;
/**
* \brief Nonblocking send for 2-sided communication triggered by CPU to communication partner
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] source_mr_index memory region index as passed to gpump_f_register_region from which data will be taken
* \param[in] offset Offset in bytes from in the source_mr from which data will be taken
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_isend_r(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vsource_mr_index, gpump_size_t voffset, gpump_size_t vsize) ;
/**
* \brief Block the stream until the send completes
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream to block until the send completes
*
*/
void gpump_f_stream_wait_send_complete_r(MPI_Fint vcomm,MPI_Fint vtarget, cudaStream_t vstream) ;
/**
* \brief CPU acknowledges that send will complete
*
* \note Make this call if you will not be making a call to gpump_stream_wait_send_complete for this transfer
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*/
void gpump_f_cpu_ack_isend_r(MPI_Fint vcomm,MPI_Fint vtarget) ;
/**
* \brief Nonblocking test of whether the send is complete
*
* \note '1' will be returned once only for each send operation
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[out] is_complete 0 for send still in progress, 1 for complete
*
*/
void gpump_f_is_send_complete_r(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint *is_complete) ;
/**
* \brief Blocking wait for send completion
*
* \note equivalent to calling gpump_f_is_send_complete in a loop until 1 is returned
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*
*/
void gpump_f_wait_send_complete_r(MPI_Fint vcomm,MPI_Fint vtarget) ;
/**
* \brief Nonblocking receive for 2-sided communication triggered by CPU to communication partner
*
* \note The underlying hardware does not support a 'gpump_f_stream_receive'
*
 * \param[in] comm MPI communicator
* \param[in] source rank in communicator of communication partner
* \param[out] target_mr_index memory region as passed to gpump_f_register_region to which data will be written
* \param[in] offset Offset in bytes from in the target_mr to which data will be written
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_receive_r(MPI_Fint vcomm,MPI_Fint vsource, MPI_Fint vtarget_mr_index, gpump_size_t voffset, gpump_size_t vsize) ;
/**
* \brief Block the stream until the receive completes
*
 * \param[in] comm MPI communicator
* \param[in] source rank in communicator of communication partner
* \param[in] stream CUDA stream to block until the receive completes
*
*/
void gpump_f_stream_wait_recv_complete_r(MPI_Fint vcomm,MPI_Fint vsource, cudaStream_t vstream) ;
/**
* \brief CPU acknowledges that receive will complete
*
* \note Make this call if you will not be making a call to gpump_stream_wait_recv_complete for this transfer
*
 * \param[in] comm MPI communicator
* \param[in] source rank in communicator of communication partner
*/
void gpump_f_cpu_ack_recv_r(MPI_Fint vcomm,MPI_Fint vsource) ;
/**
* \brief Nonblocking test of whether the receive is complete
*
* \note '1' will be returned once only for each receive operation
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*
* \retval 0 The send is still in progress
* \retval 1 The send is complete
*/
void gpump_f_is_receive_complete_r(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint *is_complete) ;
/**
* \brief Blocking wait for receive completion
*
* \note equivalent to calling gpump_is_receive_complete in a loop until 1 is returned
*
 * \param[in] comm MPI communicator
* \param[in] source rank in communicator of communication partner
*
*/
void gpump_f_wait_receive_complete_r(MPI_Fint vcomm,MPI_Fint vsource) ;