include/gpump_f.F90


interface gpump_f_iget_rx
subroutine gpump_f_iget_rx(comm, target, index, offset, remote_offset, size) &
bind(C, name='gpump_f_iget_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_iget_rx
end interface gpump_f_iget_rx

interface gpump_f_stream_wait_get_complete_rx
subroutine gpump_f_stream_wait_get_complete_rx(comm, target, index, stream) &
bind(C, name='gpump_f_stream_wait_get_complete_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_get_complete_rx
end interface gpump_f_stream_wait_get_complete_rx

interface gpump_f_cpu_ack_iget_rx
subroutine gpump_f_cpu_ack_iget_rx(comm, target, index) &
bind(C, name='gpump_f_cpu_ack_iget_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_cpu_ack_iget_rx
end interface gpump_f_cpu_ack_iget_rx

interface gpump_f_is_get_complete_rx
subroutine gpump_f_is_get_complete_rx(comm, target, index, is_complete) &
bind(C, name='gpump_f_is_get_complete_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_get_complete_rx
end interface gpump_f_is_get_complete_rx

interface gpump_f_wait_get_complete_rx
subroutine gpump_f_wait_get_complete_rx(comm, target, index) &
bind(C, name='gpump_f_wait_get_complete_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_wait_get_complete_rx
end interface gpump_f_wait_get_complete_rx

interface gpump_f_stream_send_r
subroutine gpump_f_stream_send_r(comm, target, stream, mr_index, offset, size) &
bind(C,name='gpump_f_stream_send_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_INT), intent(in), value :: mr_index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_send_r
end interface gpump_f_stream_send_r

interface gpump_f_isend_r
subroutine gpump_f_isend_r(comm, target, mr_index, offset, size) &
bind(C,name='gpump_f_isend_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: mr_index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_isend_r
end interface gpump_f_isend_r

interface gpump_f_stream_wait_send_complete_r
subroutine gpump_f_stream_wait_send_complete_r(comm, target, stream) &
bind(C, name='gpump_f_stream_wait_send_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_send_complete_r
end interface gpump_f_stream_wait_send_complete_r

interface gpump_f_cpu_ack_isend_r
subroutine gpump_f_cpu_ack_isend_r(comm, target) &
bind(C, name='gpump_f_cpu_ack_isend_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_cpu_ack_isend_r
end interface gpump_f_cpu_ack_isend_r

interface gpump_f_is_send_complete_r
subroutine gpump_f_is_send_complete_r(comm, target, is_complete) &
bind(C, name='gpump_f_is_send_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_send_complete_r
end interface gpump_f_is_send_complete_r

interface gpump_f_wait_send_complete_r
subroutine gpump_f_wait_send_complete_r(comm, target) &
bind(C, name='gpump_f_wait_send_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_wait_send_complete_r
end interface gpump_f_wait_send_complete_r

interface gpump_f_receive_r
subroutine gpump_f_receive_r(comm, target, mr_index, offset, size) &
bind(C,name='gpump_f_receive_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: mr_index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_receive_r
end interface gpump_f_receive_r

interface gpump_f_stream_wait_recv_complete_r
subroutine gpump_f_stream_wait_recv_complete_r(comm, source, stream) &
bind(C, name='gpump_f_stream_wait_recv_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: source
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_recv_complete_r
end interface gpump_f_stream_wait_recv_complete_r

interface gpump_f_cpu_ack_recv_r
subroutine gpump_f_cpu_ack_recv_r(comm, source) &
bind(C, name='gpump_f_cpu_ack_recv_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: source
end subroutine gpump_f_cpu_ack_recv_r
end interface gpump_f_cpu_ack_recv_r

interface gpump_f_is_receive_complete_r
subroutine gpump_f_is_receive_complete_r(comm, target, is_complete) &
bind(C, name='gpump_f_is_receive_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_receive_complete_r
end interface gpump_f_is_receive_complete_r

interface gpump_f_wait_receive_complete_r
subroutine gpump_f_wait_receive_complete_r(comm, target) &
bind(C, name='gpump_f_wait_receive_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_wait_receive_complete_r
end interface gpump_f_wait_receive_complete_r

interface gpump_f_term_r
subroutine gpump_f_term_r(comm) &
bind(C, name='gpump_f_term_r')
end subroutine gpump_f_term_r
end interface gpump_f_term_r

end module gpump_mod
